Remove redundant codes and fixed `Top Products (Chart)` widget can not collapse and bugs

--- a/core/FCom/Admin/Admin/theme1/assets/scss/fulleron-base.scss
+++ b/core/FCom/Admin/Admin/theme1/assets/scss/fulleron-base.scss
@@ -1719,7 +1719,7 @@ fieldset[disabled] {
 	border: 1px solid #e5e5e5;
 	position: relative;
 	&.box-collapsed {
-		.box-content {
+		.box-content, .widget-contents {
 			display: none;
 		}
 		.box-header .actions .box-collapse i:before {
